unpackaged/objects/Investigator__c.object
<CustomObject>
  <description>This object is a M:M relationship managing the relationship between the Research Activities/clinical studies and the Contacts involved</description>
  <fields>
    <fullName>Account__c</fullName>
    <description>A link to the Contacts' Account</description>
    <formula>HYPERLINK("/" &amp; Contact__r.AccountId ,  Contact__r.Account.Name)</formula>
    <inlineHelpText>A link to the Contacts' Account</inlineHelpText>
    <label>Account</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Research Activities/Studies</relationshipLabel>
    <relationshipName>Investigators</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
  </fields>
  <fields>
    <fullName>Investigator_Role__c</fullName>
    <description>The Role of the Investigator in the Research Activity/Study</description>
    <inlineHelpText>The Role of the Investigator in the Research Activity/Study</inlineHelpText>
    <label>Investigator Role</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Principal Investigator</fullName>
        </value>
        <value>
          <fullName>CO-Investigator</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Research_Activity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Link to the Research Activity of which the Contact is a member</description>
    <inlineHelpText>The Link to the Research Activity of which the Contact is a member</inlineHelpText>
    <label>Research Activity</label>
    <referenceTo>Research_Activity__c</referenceTo>
    <relationshipLabel>Investigators</relationshipLabel>
    <relationshipName>Investigators</relationshipName>
    <required>true</required>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Study_Status__c</fullName>
    <formula>TEXT(Research_Activity__r.Status__c)</formula>
    <label>Study Status</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Study_Type__c</fullName>
    <formula>Research_Activity__r.RecordType.DeveloperName</formula>
    <label>Study Type</label>
    <type>Text</type>
  </fields>
  <label>Investigator</label>
  <nameField>
    <label>Investigator Role Name</label>
    <type>Text</type>
  </nameField>
  <pluralLabel>Investigators</pluralLabel>
  <sharingModel>ControlledByParent</sharingModel>
</CustomObject>